--- a/css/styles.css
+++ b/css/styles.css
@@ -285,4 +285,6 @@ footer .form .sub-form .form-button .icon {
 	border-color: #4D5AE5;
 }
 
+.modal-open .modal-container .input-div 
+
   /* modal */
