--- a/css/styles.css
+++ b/css/styles.css
@@ -1,312 +1,341 @@
-*{
-	margin: 0;
-	padding: 0;
-  }
-  
-  ol, ul {
-	list-style: none;
-  }
-  
-  a{
-	text-decoration: none;
-	color: inherit;
-  }
-  
-  img{
-   display: block;
-  }
+* {
+  margin: 0;
+  padding: 0;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  display: block;
+}
 /* container */
 
 .container {
-	width: 1158px;
-	margin: 0 auto;
-	padding: 0 15px;
-  }
-  /* container */
-
-
-
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+/* container */
 
 /* FOOTER */
 
 footer {
-	background-color: #2e2f42;
-	padding: 100px 0;
-  }
-  footer .container {
-	display: flex;
-	align-items: baseline;
-  }
-  
-  footer .container .logo-p {
-	margin-right: 120px;
-  }
-  footer .container .social-icon-footer .social-media {
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 1.5;
-	letter-spacing: 0.02em;
-	color: #FFFFFF;
-	margin-bottom: 16px;
-  }
-  footer .container .social-icon-footer .social-list {
-	display: flex;
-	gap: 16px;
-  }
-  
-  footer .container .social-icon-footer .social-list .social-link{
-	width: 40px;
-	height: 40px;
-  }
-  footer .container .social-icon-footer .social-list .social-link .s-link {
-	width: 100%;
-	height: 100%;
-	background-color: #4d5ae5;
-	border-radius: 50%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-  }
-  footer .container .social-icon-footer .social-list .social-link a {
-	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  footer .container .social-icon-footer .social-list .social-link .s-link:hover {
-	background-color: #31d0aa;
-  }
-  footer .container .social-icon-footer .social-list .social-link .s-link:focus {
-	background-color: #31d0aa;
-  }
-  
-  
-  footer .container .social-icon-footer .social-list .social-link .s-link .icon-social {
-	fill: #f4f4fd;
-  }
-  
-  
-  footer .footer-logo-link {
-	font-family: "Raleway", sans-serif;
-	font-weight: 700;
-	font-size: 18px;
-	line-height: 1.17;
-	letter-spacing: 0.03em;
-	text-transform: uppercase;
-	color: #4d5ae5;
-	display: inline-block;
-	margin-bottom: 16px;
-  }
-  
-  footer .footer-logo-link .footer-span {
-	color: #F4F4FD;
-  }
-  footer .footer-p {
-	line-height: 1.5;
-	color: #f4f4fd;
-	letter-spacing: 0.02em;
-	max-width: 264px;
-  }
-  footer .form {
-	padding-left: 80px;
-  }
+  background-color: #2e2f42;
+  padding: 100px 0;
+}
+footer .container {
+  display: flex;
+  align-items: baseline;
+}
 
-  footer .form .form-p{
-	margin-bottom: 16px;
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 1.5;
-	letter-spacing: 0.02em;
-	color: #FFFFFF;
-  } 
+footer .container .logo-p {
+  margin-right: 120px;
+}
+footer .container .social-icon-footer .social-media {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+footer .container .social-icon-footer .social-list {
+  display: flex;
+  gap: 16px;
+}
 
-  footer .form .sub-form{
-	display: flex;
-	gap: 24px;
-  } 
+footer .container .social-icon-footer .social-list .social-link {
+  width: 40px;
+  height: 40px;
+}
+footer .container .social-icon-footer .social-list .social-link .s-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer .container .social-icon-footer .social-list .social-link a {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-  footer .form .footer-input {
-	width: 264px;
-	height: 40px;
-	border: 1px solid #ffffff;
-	background-color: transparent;
-	font-size: 12px;
-	line-height: 2;
-	letter-spacing: 0.04em;
-	padding-left: 16px;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-	border-radius: 4px;
-	color: #ffffff;
-	
-  }
-  
-  footer .form .footer-input::placeholder {
-	color: #FFFFFF;
-  }
+footer .container .social-icon-footer .social-list .social-link .s-link:hover {
+  background-color: #31d0aa;
+}
+footer .container .social-icon-footer .social-list .social-link .s-link:focus {
+  background-color: #31d0aa;
+}
 
-  footer .form .sub-form .form-button {
-	min-width: 165px;
-	height: 40px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 16px;
-	font-weight: 500;
-	line-height: 1.5;
-	letter-spacing: 0.04em;
-	color: #ffffff;
-	cursor: pointer;
-	background-color: #4d5ae5;
-	border: none;
-	border-radius: 4px;
-  }
+footer
+  .container
+  .social-icon-footer
+  .social-list
+  .social-link
+  .s-link
+  .icon-social {
+  fill: #f4f4fd;
+}
+
+footer .footer-logo-link {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
+footer .footer-logo-link .footer-span {
+  color: #f4f4fd;
+}
+footer .footer-p {
+  line-height: 1.5;
+  color: #f4f4fd;
+  letter-spacing: 0.02em;
+  max-width: 264px;
+}
+footer .form {
+  padding-left: 80px;
+}
+
+footer .form .form-p {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+
+footer .form .sub-form {
+  display: flex;
+  gap: 24px;
+}
+
+footer .form .footer-input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+}
+
+footer .form .footer-input::placeholder {
+  color: #ffffff;
+}
+
+footer .form .sub-form .form-button {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+}
 footer .form .sub-form .form-button .icon {
-	margin-left: 16px;
+  margin-left: 16px;
 }
 
 /* FOOTER */
 
-
 /* modal */
 
-
 .modal-open .modal {
-	position: fixed;
-	top:0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(46, 47, 66, 0.4);
-	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-open .modal .modal-container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 408px;
-	min-height: 584px;
-	background-color: #fcfcfc;
-	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
-	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	padding: 72px 24px 24px 24px;
-
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 584px;
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 
 .modal-open .modal .modal-container .modal-button {
-	position: absolute;
-	top: 24px;
-	right: 24px;
-	width: 24px;
-	height: 24px;
-	border-radius: 50%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: #e7e9fc;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	padding: 0;
-	cursor: pointer;
-	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-open .modal .modal-container .modal-button:hover{
-	background-color: #404bbf;
-	border: none;
+.modal-open .modal .modal-container .modal-button:hover {
+  background-color: #404bbf;
+  border: none;
 }
-.modal-open .modal .modal-container .modal-button:focus{
-	background-color: #404bbf;
-	border: none;
+.modal-open .modal .modal-container .modal-button:focus {
+  background-color: #404bbf;
+  border: none;
 }
 
 .modal-open .modal .modal-container .modal-button .icon {
-	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-open .modal .modal-container .modal-button:hover .icon {
-	fill: #ffffff;
+  fill: #ffffff;
 }
 .modal-open .modal .modal-container .modal-button:focus .icon {
-	fill: #ffffff;
+  fill: #ffffff;
 }
 
 .modal-open .modal .modal-container .modal-p {
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 1.5;
-	text-align: center;
-	letter-spacing: 0.02em;
-	color: #2E2F42;
-	margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 16px;
 }
 
 .modal-open .modal .modal-container .input-div {
-	margin-bottom: 8px;
-	
+  margin-bottom: 8px;
 }
 .modal-open .modal .modal-container .input-div .input-label {
-	font-size: 12px;
-	line-height: 1.17;
-	letter-spacing: 0.04em;
-	color: #8e8f99;
-	display: block;
-	margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
 }
 .modal-open .modal .modal-container .input-div .input-div-in {
-	position: relative;
+  position: relative;
 }
 
 .modal-open .modal .modal-container .input-div .input-name {
-	width: 360px;
-	height: 40px;
-	border: 1px solid rgba(46, 47, 66, 0.4);
-	border-radius: 4px;
-	background-color: transparent;
-	padding-left: 24px;
-	padding-right: 24px;
-	outline: transparent;
-	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  width: 360px;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 24px;
+  padding-right: 24px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-open .modal .modal-container .input-div .input-name:hover {
-	border-color: #4D5AE5;
+  border-color: #4d5ae5;
 }
 
 .modal-open .modal .modal-container .input-div .icon {
-	position: absolute;
-	left: 16px;
-	top: 50%;
-	transform: translateY(-50%);
-	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-open .modal .modal-container .input-div .input-name:hover .icon {
-	border-color: #4D5AE5;
+  border-color: #4d5ae5;
 }
 
-.modal-open .modal-container div:nth-child(4){
-	'margin-bottom: 16px;
+.modal-open .modal-container div:nth-child(4) {
+  margin-bottom: 16px;
 }
 
 .modal-open .modal .modal-container .input-div .input-comment {
-	width: 360px;
-	height: 120px;
-	font-size: 12px;
-	line-height: 1.17;
-	letter-spacing: 0.04em;
-	color: rgba(46, 47 , 66, 0.4);
-	border: 1px solid rgba(46, 47, 66, 0.4);
-	border-radius: 4px;
-	background-color: transparent;
-	padding: 8px 24px;
-	outline: transparent;
-	resize: none;
-	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 360px;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 24px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-open .modal .modal-container .input-div .input-comment:focus {
-	border-color: #4D5AE5;
+  border-color: #4d5ae5;
 }
 
+.modal-open .modal .modal-container .check-box {
+  margin-bottom: 24px;
+  border: 1px red solid;
+}
+.modal-open .modal .modal-container .check-box .label-checkbox {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-left: -18px;
+}
 
-  /* modal */
+.check-box .visually-hidden {
+	visibility: hidden;
+}
+.modal-open .modal .modal-container .check-box .label-checkbox .label-span {
+	width: 16px;
+	height: 16px;
+	border: 1px solid rgba(46, 47, 66, 0.4);
+	border-radius: 2px;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	fill: transparent;
+	
+  }
+  .modal-open .modal .modal-container .check-box .visually-hidden:checked .label-span {
+	background-color: #404bbf;
+	border: none;
+	fill: #F4F4FD;
+  }
+
+/* modal */
